fix image spacing

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h4{
 }
 .imgcontain img{
 	width: 45%;
-	margin: 5%;
+	margin: 2.5%;
 	float: left;
 }
 main ul{
